<resources>
    <string name="app_name">TRE Consulta</string>
    <string name="title_activity_main">TRE Consulta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_text">Pesquisa de informação de eleitores</string>
    <string name="app_name_text_style">bold</string>
    <string name="trespImage_content_desc">Logo do TRE-SP</string>
    <string name="votingSectionLabel">Seção de votação:</string>
    <string name="birthdateLabel">Data de nascimento</string>
    <string name="birthdate_hint">Dia/Mês de nascimento</string>
    <string name="title_activity_voter_list">VoterListActivity</string>
    <string name="electoralZoneLabel">29ª Zona Eleitoral</string>
    <string name="voterName_hint">Nome do eleitor</string>
    <string name="clearBtn_label">Limpar</string>
    <string name="searchBtn_label">Pesquisar</string>
</resources>