<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="voterInfo" type="br.com.goiaba.treconsulta.model.Voter" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.TRESearchActivity" android:id="@+id/coordinatorLayout">
        <ImageView
                android:layout_width="98dp"
                android:layout_height="40dp" app:srcCompat="@drawable/tre_sp" android:id="@+id/trespImage"
                android:contentDescription="@string/trespImage_content_desc"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/appTitle"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/trespImage" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="76dp" android:layout_marginStart="76dp" android:paddingLeft="10dp"
                android:paddingTop="10dp" android:paddingRight="10dp" android:paddingBottom="10dp"
                android:textColor="@color/app_title_color" android:textSize="14sp"
                android:textStyle="bold"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/voterName"
                app:layout_constraintTop_toBottomOf="@+id/appTitle"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
                android:hint="@string/voterName_hint" android:importantForAutofill="no"/>
        <EditText
                android:layout_width="275dp"
                android:layout_height="45dp"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/birthdate"
                android:maxLength="5"
                android:hint="@string/birthdate_hint"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/voterName" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <Button
                android:layout_width="76dp"
                android:layout_height="46dp" android:id="@+id/clearBtn"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/voterName" android:text="@string/clearBtn_label"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="46dp" android:id="@+id/searchBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthdate"
                android:layout_marginTop="8dp" android:textSize="12sp" android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
                android:text="@string/searchBtn_label"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/searchBtn"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp">

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/resultView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:text="@string/electoralZoneLabel"
                android:layout_width="272dp"
                android:layout_height="40dp" android:id="@+id/electoralZoneLabel"
                app:layout_constraintStart_toEndOf="@+id/trespImage" android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textStyle="bold"
                android:duplicateParentState="false" android:clickable="false"
                android:gravity="center|center_vertical" android:textSize="24sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>